[gd_scene load_steps=3 format=2]

[ext_resource path="res://SecondaryScenes/SpecialAreas/AreaSpawn.gd" type="Script" id=1]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 8, 360.29 )

[node name="AreaSpawn" type="Area2D"]
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="ReactivateSpawner" type="Timer" parent="."]
wait_time = 15.0
one_shot = true

[connection signal="body_entered" from="." to="." method="_on_AreaSpawn_body_entered"]
[connection signal="timeout" from="ReactivateSpawner" to="." method="_on_ReactivateSpawner_timeout"]
